--- a/Study/项目/d3-project/1.选择元素和绑定元素.html
+++ b/Study/项目/d3-project/1.选择元素和绑定元素.html
@@ -8,8 +8,7 @@
         </meta>
         <script src="../../jQuery/jquery/jquery-1.9.1.min.js">
         </script>
-        <script src="https://d3js.org/d3.v5.min.js">
-        </script>
+        <script src="../js/d3.min.js"></script>
         <script>
         	$(function() {
         		// 选择元素
@@ -22,7 +21,7 @@
 
         		// 1.绑定数据datum
         		// var str = "is an animal";
-        		// var div_add = d3.selectAll("div");
+        		// var div_add = d3-project.selectAll("div");
         		// // datum将一个数据绑定到所有选择集上
         		// div_add.datum(str).text(function(d,i){
         		// 	return "第"+i+"个"+d;
@@ -30,7 +29,7 @@
 
         		// 2.绑定数据：data
         		// var dataset = ["so cute","cute","fat"];
-        		// var div_add = d3.selectAll("div");
+        		// var div_add = d3-project.selectAll("div");
         		// div_add.data(dataset).text(function(d,i){
         		// 	return "第"+i+"个动物"+d;
         		// });
@@ -38,7 +37,7 @@
         		// update,enter,exit
         		//enter
         		// var arr = [2,6,9,12,15];
-        		// var ps = d3.select("body").selectAll("p");
+        		// var ps = d3-project.select("body").selectAll("p");
         		// var update = ps.data(arr); // 调用data返回的是update部分
         		// var enter = update.enter(); // 得到enter部分
 
@@ -54,7 +53,7 @@
 
         		// exit        		
         		// var arr = [3];
-        		// var ps = d3.select("body").selectAll("p");
+        		// var ps = d3-project.select("body").selectAll("p");
         		// var update = ps.data(arr); // 调用data返回的是update部分
         		// var enter = update.exit(); // 得到exit部分
 
