--- a/Study/项目/d3-project/4.使用比例尺实现2中图表.html
+++ b/Study/项目/d3-project/4.使用比例尺实现2中图表.html
@@ -7,8 +7,7 @@
             </title>
             <script src="../../jQuery/jquery/jquery-1.9.1.min.js">
             </script>
-            <script src="https://d3js.org/d3.v5.min.js">
-            </script>
+        <script src="../js/d3.min.js"></script>
             <script>
             	$(function() {
             		var dataset = [1.2,2.3,0.9,1.5,3.3];
