--- a/Study/项目/d3-project/2.制作简单的图表.html
+++ b/Study/项目/d3-project/2.制作简单的图表.html
@@ -8,8 +8,7 @@
         </meta>
         <script src="../../jQuery/jquery/jquery-1.9.1.min.js">
         </script>
-        <script src="https://d3js.org/d3.v5.min.js">
-        </script>
+        <script src="../js/d3.min.js"></script>
         <script>
         	$(function() {
         		// 1.数据准备
