--- a/Study/项目/d3-project/5.坐标轴.html
+++ b/Study/项目/d3-project/5.坐标轴.html
@@ -7,8 +7,7 @@
             </title>
             <script src="../../jQuery/jquery/jquery-1.9.1.min.js">
             </script>
-            <script src="https://d3js.org/d3.v5.min.js">
-            </script>
+        <script src="../js/d3.min.js"></script>
             <script>
             	$(function() {
             		// 准备数据
