--- a/Study/项目/d3-project/6.绘制完整坐标系.html
+++ b/Study/项目/d3-project/6.绘制完整坐标系.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>绘制完整坐标系</title>
 	<script src="../../jQuery/jquery/jquery-1.9.1.min.js"></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="../js/d3.min.js"></script>
     <script>
     	$(function() {
     		var svg = d3.select("body").select("svg");
