--- a/Study/测试/test.html
+++ b/Study/测试/test.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script>
+    <style>
+        .box {
+            width: 100px;
+            height: 200px;
+        }
 
-    </script>
+        .box:hover p {
+            font-size: 20px;
+            color: red;
+        }
+    </style>
 </head>
 <body>
-
+<div class="box">
+    <p class="chg">我要变瘦！</p>
+</div>
 </body>
 </html>
