--- a/Study/实战/微金所/index.html
+++ b/Study/实战/微金所/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>手机微金所</title>
     <link href="./lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
@@ -15,7 +15,7 @@
 <body>
 <!-- 顶部 -->
 <header id="header">
-    <div id="topbar">
+    <div class="topbar hidden-sm hidden-xs"> <!-- 当设备为pad或手机时隐藏顶部通栏 -->
         <div class="container">
             <div class="row text-center">
                 <div class="tb-1 col-md-2">
@@ -41,8 +41,8 @@
             </div>
         </div>
     </div>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar navbar-itcast navbar-default navbar-static-top">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -51,7 +51,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">微金所</a>
+                <a class="navbar-brand" href="#">
+                    <i class="icon-icon"></i>
+                    <i class="icon-logo"></i>
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,14 +64,13 @@
                     <li><a href="#">我要借款</a></li>
                     <li><a href="#">平台介绍</a></li>
                     <li><a href="#">新手专区</a></li>
+                    <li role="separator" class="divider"></li>
                     <li><a href="#">最新动态</a></li>
+                    <li role="separator" class="divider"></li>
                     <li><a href="#">微论坛</a></li>
-
                 </ul>
-
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right hidden-sm hidden-xs">
                     <li><a href="#">个人中心</a></li>
-
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
