--- a/Study/测试/test.html
+++ b/Study/测试/test.html
@@ -14,6 +14,21 @@
             color: red;
         }
     </style>
+    <script src="../static/jquery/jquery-3.2.1.min.js"></script>
+    <script>
+        $(function () {
+            var js = {type:'bar'};
+            var arr = new Array();
+            arr.push({type:'line'});
+            arr.push({type:'bar'});
+            /*$.each(arr,function (index,value) {
+                if(js.type == value.type) {
+                    console.log(js);
+                }
+            });*/
+            console.log($.inArray(js, arr));
+        })
+    </script>
 </head>
 <body>
 <div class="box">
