--- a/Study/实战/微金所/code/index.html
+++ b/Study/实战/微金所/code/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>手机微金所</title>
     <link href="./lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
@@ -79,15 +79,131 @@
 <!-- #顶部-->
 
 <!--  轮播 -->
-<section></section>
+<section>
+    <div id="carousel-itcast-generic" class="carousel slide" data-ride="carousel">
+        <!-- 小圆点 -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-itcast-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-itcast-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-itcast-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-itcast-generic" data-slide-to="3"></li>
+        </ol>
+
+        <!-- 图片 -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active" data-image-lg="img/slide_01_2000x410.jpg" data-image-xs="img/slide_01_640x340.jpg"></div>
+            <div class="item" data-image-lg="img/slide_02_2000x410.jpg" data-image-xs="img/slide_02_640x340.jpg"></div>
+            <div class="item" data-image-lg="img/slide_03_2000x410.jpg" data-image-xs="img/slide_03_640x340.jpg"></div>
+            <div class="item" data-image-lg="img/slide_04_2000x410.jpg" data-image-xs="img/slide_04_640x340.jpg"></div>
+        </div>
+
+        <!-- 控制前后 -->
+        <a class="left carousel-control" href="#carousel-itcast-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-itcast-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
 <!-- #轮播 -->
 
 <!--  产品 -->
-<section></section>
+<section class="products">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <a href="#">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="icon-uniE907"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">支付交易保障</h4>
+                            银联支付全程保护支付安全
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="icon-uniE907"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">支付交易保障</h4>
+                            银联支付全程保护支付安全
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="icon-uniE907"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">支付交易保障</h4>
+                            银联支付全程保护支付安全
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="icon-uniE907"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">支付交易保障</h4>
+                            银联支付全程保护支付安全
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="icon-uniE907"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">支付交易保障</h4>
+                            银联支付全程保护支付安全
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a href="#">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="icon-uniE907"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">支付交易保障</h4>
+                            银联支付全程保护支付安全
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- #产品 -->
 
 <!--  预约 -->
-<section></section>
+<section class="order">
+    <div class="container">
+        <p class="pull-left"><i class="icon-uniE906"></i>现在有<span>458</span>人在排队，累计预约交易成功<span>7409</span>次。 什么是预约投标？ <span><a href="#">立即预约</a></span></p>
+        <p class="pull-right"><a href="#"><i class="icon-uniE905"></i>微金所企业宣传片</a></p>
+    </div>
+</section>
 <!-- #预约 -->
 
 <!--  推荐 -->
@@ -320,6 +436,7 @@
     </div>
 </section>
 <!-- #推荐 -->
+
 
 <!--  新闻 -->
 <section></section>
