--- a/Study/测试/bootstrap_test.html
+++ b/Study/测试/bootstrap_test.html
@@ -32,6 +32,11 @@
                     Settings
                 </a>
             </li>
+            <li role="presentation">
+                <a href="#right" aria-controls="settings" role="tab" data-toggle="tab">
+                    Settings
+                </a>
+            </li>
         </ul>
 
         <!-- Tab panes -->
@@ -40,6 +45,7 @@
             <div role="tabpanel" class="tab-pane fade" id="profile">profile</div>
             <div role="tabpanel" class="tab-pane fade" id="messages">messages</div>
             <div role="tabpanel" class="tab-pane fade" id="settings">settings</div>
+            <div role="tabpanel" class="tab-pane fade" id="right">settings</div>
         </div>
     </div>
     <script src="../static/jquery/jquery-3.2.1.min.js"></script>
