--- a/Study/面向对象/6.js对象/05 面向对象认识JS - 函数对象详解/03 1 call借用.html
+++ b/Study/面向对象/6.js对象/05 面向对象认识JS - 函数对象详解/03 1 call借用.html
@@ -21,6 +21,7 @@
        }
    };
     //借用 供爷法则
-    myclass.getAllStudentsNumbers.call(student)
+    // student向myclass借用一下myclass中的getAllStudentsNumbers方法
+    console.log(myclass.getAllStudentsNumbers.call(student))
 
 </script>
