--- a/Study/ES6/15.Promise/1.Promise对象简单例子.html
+++ b/Study/ES6/15.Promise/1.Promise对象简单例子.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <script>
+    // Promise构造函数接受一个函数作为参数，该函数的两个参数分别是resolve和reject。
+    // 它们是两个函数，由 JavaScript 引擎提供，不用自己部署。
     function timeout(ms) {
         return new Promise((resolve,reject)=>{
             console.log(resolve);
