--- a/Study/ES6/17.Generator函数的语法/11.Generator与状态机.html
+++ b/Study/ES6/17.Generator函数的语法/11.Generator与状态机.html
@@ -7,30 +7,32 @@
 <body>
 <script>
     // 在ES5实现两种状态: 锁-开
-    var ticking = true;
-    var clock = function() {
-        if (ticking) {
-            console.log('ticking');
-        } else{
-            console.log('tocked');
-        }
-        ticking = !ticking;
-    }
+    // var ticking = true;
+    // var clock = function() {
+    //     if (ticking) {
+    //         console.log('ticking');
+    //     } else{
+    //         console.log('tocked');
+    //     }
+    //     ticking = !ticking;
+    // }
 
     // ES6的实现方式:更高效，省去了中间变量，更安全：变量不会被非法篡改
     var col = function* () {
         while (true) {
-            console.log('ticking');
-            yield ;
-            console.log('tocked');
-            yield ;
+            yield false; // stop
+            yield true; // play
         }
     }
 
     let co = col();
+    console.log(co);
     co.next();
+    console.log(co);
     co.next();
+    console.log(co);
     co.next();
+    console.log(co);
     co.next();
 </script>
 </body>
